updated projects/about me sections of portfolio

--- a/index.html
+++ b/index.html
@@ -47,62 +47,80 @@
                 <div class="about-details">
                     <h2>About Me</h2>
                     <div class="abt-row">
-                        <p>I am an aspiring Software Engineer with a strong foundation in programming, problem-solving, and object-oriented design. 
-                            My experience spans across front-end and back-end development and I have a strong interest in developing practical, user-friendly applications. 
-                            Over the past year, I have focused on learning core programming languages such as C# and JavaScript as well as HTML,CSS and PHP.
-                            I have completed several proijects that emphasize clean, efficient code. I personally enjoy problem-solving and am dedicated to improving my skills through hands-on experience.
-                            <p>
-                            Recently, I have been working on projects that explore web development fundamentals, like building an e-commerce website and developing command-line applications. 
-                            These experiences have helped me build a solid understanding of data structures, object-oriented programming, and version control.
-                            </p>
-                            <p>Beyond coding, I am passionate about technology and fitness, particularly calisthenics. I enjoy keeping up with current trends in tech and finding out new ways to improve my skills in coding and debugging. 
-                            In my free time, I have focused on documenting my journey in calisthenics as it takes commitment to achieve a great level at the sport, overall combining my hobbies with a drive for continuous improvement. 
-                            I look forward to collaborating on innovative projects that allow me to grow as a developer and make a positive impact.
+                        <p>
+                            I am a Software Engineering student with experience in full-stack development using C#, JavaScript, PHP and modern frameworks such as Blazor, React and Laravel. 
+                            I enjoy building practical, user-focused applications and have worked on both Personal and University projects involving Azure services, MySQL databases and secure backend development.
+                        </p>
+                        <p>
+                            Outside of programming, I enjoy calisthenics, reading, volleyball, building PCs, and men's fashion - interests that keep me creative, disciplined, and always learning.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
         <section class="projects" id="projects">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="projects-section">
-                    <div class="project">
-                        <h3>Inventory Management System</h3>
-                        <div class="img-gallery">
-                            <img src="assets/prj-2/inventory-system-img-1.png" alt="inventory system project image">
-                            <img src="assets/prj-2/inventory-system-img-2.png" alt="inventory system project image">
-                            <img src="assets/prj-2/inventory-system-img-3.png" alt="inventory system project image">
-                            <p>This Inventory management system was developed as a group, with the goal of implementing real features of an inventory system such as,
-                                allowing admins to add,remove and update products, generate reports and issue invoices for over the counter purchases. 
-                                The project allowed me to gain experience in both front-end and back-end and scrum methodologies, my main focus in the group was implementing the main
-                                admin features allowing for products to be added,removed or edited and generate a report of all the available products and filter the inventory table to find
-                                relevant data.
-                            </p>
-                            <p><strong>Technologies and Languages Used:</strong> HTML,CSS,PHP and MySQL,ZAP</p>
-                        </div>
-                    </div>
-                    <div class="project">
-                        <h3>E-Commerce Website</h3>
-                        <div class="img-gallery">
-                            <img src="assets/prj-1/e-commerce-portfolio-img-1.png" alt="e-commerce website project image">
-                            <img src="assets/prj-1/e-commerce-portfolio-img-2.png" alt="e-commerce website project image">
-                            <img src="assets/prj-1/e-commerce-portfolio-img-3.png" alt="e-commerce website project image">
-                            <img src="assets/prj-1/e-commerce-portfolio-img-4.png" alt="e-commerce website project image">
-                            <img src="assets/prj-1/e-commerce-portfolio-img-5.png" alt="e-commerce website project image">
-                            <img src="assets/prj-1/e-commerce-portfolio-img-7.png" alt="e-commerce website project image">
-                            <p>This E-Commerce Website was developed in my free time, with the goal of replicating the features of a
-                                fully functional, real-world online store. The project allowed me to gain experience in both front-end and back-end, 
-                                and i focused on implementing secure user validation, user's orders page, and a user friendly interface. 
-                                I also worked on optimizing performance and accessibility. Overall, this project 
-                                deepened my understanding of developing websites fit for e-commerce, as well as integrating efficient back-end systems.
-                            </p>
-                            <p><strong>Technologies and Languages Used:</strong> HTML,CSS,PHP and MySQL</p>
-                        </div>
-                    </div>
+    <div class="container">
+        <h2>Projects</h2>
+
+        <div class="projects-grid">
+
+            <!-- NEXT CAREER FINDER SYSTEM -->
+            <div class="project-card">
+                <h3>NEXT Career Finder System</h3>
+                <h4>University Project</h4>
+                <div class="project-gallery">
+                    <img src="" alt="NEXT Career Finder image">
+                    <img src="" alt="NEXT Career Finder image">
+                    <img src="" alt="NEXT Career Finder image">
+                </div>
+
+                <ul class="project-details">
+                    <li>Developed a career-matching system for NEXT as part of a university client project.</li>
+                    <li>Built using <strong>Blazor</strong> and <strong>Azure SQL Server</strong>.</li>
+                    <li>Main role was to Implement backend logic and database communication.</li>
+                    <li>System recommended job roles based on questionnaire responses.</li>
+                </ul>
+
+                <div class="tech-icons">
+                    <img src="assets/icons/blazor.png" alt="Blazor">
+                    <img src="assets/icons/azure.png" alt="Azure">
+                    <img src="assets/icons/csharp.png" alt="C#">
+                    <img src="assets/icons/sql.png" alt="SQL">
                 </div>
             </div>
-        </section>
+
+            <!-- E-COMMERCE WEBSITE -->
+            <div class="project-card">
+                <h3>E-Commerce Website</h3> 
+                <h4>Personal Project</h4>
+
+                <div class="project-gallery">
+                    <img src="assets/prj-1/e-commerce-portfolio-img-1.png">
+                    <img src="assets/prj-1/e-commerce-portfolio-img-2.png">
+                    <img src="assets/prj-1/e-commerce-portfolio-img-3.png">
+                    <img src="assets/prj-1/e-commerce-portfolio-img-4.png">
+                    <img src="assets/prj-1/e-commerce-portfolio-img-5.png">
+                </div>
+
+                <ul class="project-details">
+                    <li>Fully functional e-commerce platform built in my free time.</li>
+                    <li>Features include cart system, secure user authentication, and product reviews.</li>
+                    <li>Strengthened my experience in front-end and back-end development.</li>
+                    <li>Focus on clean UI, accessibility, and performance.</li>
+                </ul>
+
+                <div class="tech-icons">
+                    <img src="assets/icons/html.png">
+                    <img src="assets/icons/css.png">
+                    <img src="assets/icons/js.png">
+                    <img src="assets/icons/php-icon.png">
+                    <img src="assets/icons/mysql-icon.png">
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
     </main>
     <footer>
         <div class="container">
