add project images and change folder names

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
                 <h3>NEXT Career Finder System</h3>
                 <h4>University Project</h4>
                 <div class="project-gallery">
-                    <img src="" alt="NEXT Career Finder image">
-                    <img src="" alt="NEXT Career Finder image">
-                    <img src="" alt="NEXT Career Finder image">
+                    <img src="assets/next-career/next-group-4-proj-1.png" alt="NEXT Career Finder image">
+                    <img src="assets/next-career/next-group-4-proj-2.png" alt="NEXT Career Finder image">
+                    <img src="assets/next-career/next-group-4-proj-3.png" alt="NEXT Career Finder image">
+                    <img src="assets/next-career/next-group-4-proj-4.png" alt="NEXT Career Finder image">
                 </div>
 
                 <ul class="project-details">
@@ -95,11 +96,11 @@
                 <h4>Personal Project</h4>
 
                 <div class="project-gallery">
-                    <img src="assets/prj-1/e-commerce-portfolio-img-1.png">
-                    <img src="assets/prj-1/e-commerce-portfolio-img-2.png">
-                    <img src="assets/prj-1/e-commerce-portfolio-img-3.png">
-                    <img src="assets/prj-1/e-commerce-portfolio-img-4.png">
-                    <img src="assets/prj-1/e-commerce-portfolio-img-5.png">
+                    <img src="assets/e-com/e-commerce-portfolio-img-1.png">
+                    <img src="assets/e-com/e-commerce-portfolio-img-2.png">
+                    <img src="assets/e-com/e-commerce-portfolio-img-3.png">
+                    <img src="assets/e-com/e-commerce-portfolio-img-4.png">
+                    <img src="assets/e-com/e-commerce-portfolio-img-5.png">
                 </div>
 
                 <ul class="project-details">
